<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="RfidMockNoRfidInRange" Id="{b181b1f8-f791-4175-9f53-bef249408949}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK RfidMockNoRfidInRange IMPLEMENTS IRfidHeadWrapper
VAR
    _timeOut        : Tc2_Standard.TON;
    _executionTimer : Tc2_Standard.TON;

    _udintToMillis : UDINT := 1000;
    _busy          : BOOL;

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Execute" Id="{a603ec6e-6ff7-4bdc-acf2-5a94c5569563}">
      <Declaration><![CDATA[METHOD Execute
VAR_INPUT
    xExecute       : BOOL;
    xAbort         : BOOL;
    udiTimeOut     : UDINT;
    eCommand       : RFID_FB_U.COMMAND;
    udiStartAdress : UDINT;
    uiDataLenght   : UINT;
    myWriteData    : ARRAY[0..127] OF BYTE;
END_VAR
VAR_OUTPUT
    myReadData          : ARRAY[0..127] OF BYTE;
    xDone               : BOOL;
    xBusy               : BOOL;
    xError              : BOOL;
    xAborted            : BOOL;
    eErrorID            : RFID_FB_U.ERROR;
    xTP                 : BOOL;
    xRWHeadNotCOnnected : BOOL;
    uiDataRxLength      : UINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF xExecute THEN
    _busy := TRUE;
END_IF

//28 blocks, 4 bytes each, => 112 bytes max user Memory!
uiDataRxLength := uiDataLenght;
xBusy          := _busy;

_timeOut(in := _busy, PT := UDINT_TO_TIME(udiTimeOut) / _udintToMillis);

xTP := FALSE;

IF _timeOut.Q THEN
    xBusy    := FALSE;
    xError   := TRUE;
    eErrorId := RFID_FB_U.ERROR.TIME_OUT;
END_IF]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>